--- a/src/chat/client/appearance.fxml
+++ b/src/chat/client/appearance.fxml
@@ -39,7 +39,10 @@
         <PasswordField fx:id="passField" layoutX="112.0" layoutY="221.0" onAction="#login" promptText="Введите пароль" />
         <Button layoutX="134.0" layoutY="277.0" onAction="#login" text="Вход" />
         <Button layoutX="204.0" layoutY="277.0" onAction="#close" text="Выход" />
-        <Label fx:id="loginError" layoutX="100.0" layoutY="328.0" text="Неверный логин/пароль!" visible="false" />
+        <Label fx:id="loginError" styleClass="loginErrorMsg" layoutX="92.0" layoutY="315.0"
+               text="Неверный логин/пароль!" visible="false"/>
+        <Label fx:id="loginOverlap" styleClass="loginErrorMsg" layoutX="91.0" layoutY="315.0"
+               text="Пользователь уже в чате!" visible="false"/>
     </Pane>
 
 
