--- a/src/chat/client/chatWindow.fxml
+++ b/src/chat/client/chatWindow.fxml
@@ -2,6 +2,7 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -11,10 +12,11 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="window" alignment="center" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.172-ea"
+<?import javafx.scene.control.Label?>
+<VBox fx:id="window" alignment="center" minWidth="600.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.172-ea"
       xmlns:fx="http://javafx.com/fxml/1" fx:controller="chat.client.ChatWindowController">
     <stylesheets><URL value="@/chat/client/css/darcula.css" /></stylesheets>
-    <MenuBar fx:id="menubar" VBox.vgrow="ALWAYS">
+    <MenuBar fx:id="menubar" minWidth="600.0" VBox.vgrow="ALWAYS">
         <Menu fx:id="file" text="File">
             <MenuItem fx:id="clearChat" onAction="#clearChat" text="Очистить чат"/>
             <SeparatorMenuItem />
@@ -28,10 +30,15 @@
         </Menu>
     </MenuBar>
 
-    <VBox VBox.vgrow="ALWAYS" fx:id="chatPane">
-        <TextArea fx:id="textArea" editable="false" VBox.vgrow="ALWAYS" />
-
-        <HBox>
+    <VBox fx:id="chatPane" VBox.vgrow="ALWAYS">
+        <HBox VBox.vgrow="ALWAYS">
+            <TextArea fx:id="textArea" editable="false" minWidth="400" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS"/>
+            <VBox>
+                <Label fx:id="onlineLabel" text="В данный момент онлайн(0):"/>
+                <ListView fx:id="onlineList" minHeight="200.0" minWidth="200"/>
+            </VBox>
+        </HBox>
+        <HBox minWidth="600.0">
             <TextField fx:id="textField" onAction="#sendMessage" promptText="Введите текст" HBox.hgrow="ALWAYS" />
             <Button fx:id="buttonSend" onAction="#sendMessage" text="Send" />
             <Button fx:id="buttonSearch" onAction="#searchPhrase" text="Search" />
